package claro_java_springboot.lab_project.modelando_iphone_uml.navegadores;

/**
 * Navegador
 */
public interface Navegador {
    void exibirPagina();

    void adicionarNovaAba();

    void atualizarPagina();
}
